@@ -34,6 +34,10 @@ Thomas McWilliams     tgm9999@yahoo.com                 27 Aug 1999- 2 Apr 2001
 
 -------------------------------------------------------------------------------
 
+Thu Jan 02 16:12:36 EET 2003 Harry Kalogirou <harkal@gmx.net>
+
+        * Better select hash.
+
 Fri Nov 01 01:52:44 EET 2002 Harry Kalogirou <harkal@gmx.net>
 
         * Changed the position of ds in the _registers struct.
